# test-mailing-automation-app

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  example.config.yaml  pyproject.toml
backend/app/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/app/management/commands/: load_timezones.py  run_scheduler.py
backend/backend/: settings.py  urls.py  utils.py
